fix: chagne copy indicator style to fix layout on Safari

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -89,8 +89,6 @@
   font-size: 85%;
   cursor: pointer;
   overflow-wrap: normal;
-  position: absolute;
-  right: 0.4rem;
 }
 
 .code:hover,
